# testgo

./: build-profile.json5
AppScope/: app.json5
entry/src/main/cpp/: CMakeLists.txt  gotest.h  napi_init.cpp
entry/src/main/golang/: build.ps1  go.mod  gotest.h
entry/src/main/golang/native/: main.go
